--- a/index.html
+++ b/index.html
@@ -49,7 +49,12 @@
                                     <small><a href="#" title="">by Matilda</a></small>
                                 </div><!-- end meta -->
                             </div><!-- end blog-box -->
-
+                            <!-- /21669303496/0622_test_320480 -->
+                            <div id='div-gpt-ad-1624850292720-0' style='min-width: 320px; min-height: 480px;'>
+                                <script>
+                                    googletag.cmd.push(function () { googletag.display('div-gpt-ad-1624850292720-0'); });
+                                </script>
+                            </div>
                             <hr class="invis">
 
                             <div class="blog-box row">
