--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+    <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
     <script>
         window.googletag = window.googletag || { cmd: [] };
         googletag.cmd.push(function () {
-            googletag.defineSlot('/21669303496/0622_test_320480', [320, 480], 'div-gpt-ad-1624850292720-0').addService(googletag.pubads());
+            googletag.defineSlot('/21669303496/1x1_test_0624', [1, 1], 'div-gpt-ad-1624856441101-0').addService(googletag.pubads());
             googletag.pubads().enableSingleRequest();
             googletag.enableServices();
         });
     </script>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <title>cc demo page</title>
@@ -50,11 +52,13 @@
                                 </div><!-- end meta -->
                             </div><!-- end blog-box -->
                             <!-- /21669303496/0622_test_320480 -->
-                            <div id='div-gpt-ad-1624850292720-0' style='min-width: 320px; min-height: 480px;'>
+                            <!-- /21669303496/1x1_test_0624 -->
+                            <div id='div-gpt-ad-1624856441101-0'>
                                 <script>
-                                    googletag.cmd.push(function () { googletag.display('div-gpt-ad-1624850292720-0'); });
+                                    googletag.cmd.push(function () { googletag.display('div-gpt-ad-1624856441101-0'); });
                                 </script>
                             </div>
+
                             <hr class="invis">
 
                             <div class="blog-box row">
