--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-light bg-light mb-5">
+        <a class="navbar-brand" href="#">
+            <img src="upload/logo.png" height="30">
+        </a>
+    </nav>
     <section class="section wb">
         <div class="container">
             <div class="row">
@@ -105,18 +110,6 @@
                                     <small><a href="#" title="">by Matilda</a></small>
                                 </div><!-- end meta -->
                             </div><!-- end blog-box -->
-
-                            <hr class="invis">
-
-                            <div class="row">
-                                <div class="col-lg-10 offset-lg-1">
-                                    <div class="banner-spot clearfix">
-                                        <div class="banner-img">
-                                            <img src="upload/banner_05.jpg" alt="" class="img-fluid">
-                                        </div><!-- end banner-img -->
-                                    </div><!-- end banner -->
-                                </div><!-- end col -->
-                            </div><!-- end row -->
 
                             <hr class="invis">
 
@@ -270,15 +263,6 @@
 
                 <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
                     <div class="sidebar">
-                        <div class="widget">
-                            <h2 class="widget-title">Search</h2>
-                            <form class="form-inline search-form">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Search on the site">
-                                </div>
-                                <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
-                            </form>
-                        </div><!-- end widget -->
 
                         <div class="widget">
                             <h2 class="widget-title">Recent Posts</h2>
@@ -312,30 +296,6 @@
                                     </a>
                                 </div>
                             </div><!-- end blog-list -->
-                        </div><!-- end widget -->
-
-                        <div class="widget">
-                            <h2 class="widget-title">Advertising</h2>
-                            <div class="banner-spot clearfix">
-                                <div class="banner-img">
-                                    <img src="upload/banner_04.jpg" alt="" class="img-fluid">
-                                </div><!-- end banner-img -->
-                            </div><!-- end banner -->
-                        </div><!-- end widget -->
-
-                        <div class="widget">
-                            <h2 class="widget-title">Instagram Feed</h2>
-                            <div class="instagram-wrapper clearfix">
-                                <a href="#"><img src="upload/garden_sq_01.jpg" alt="" class="img-fluid"></a>
-                                <a href="#"><img src="upload/garden_sq_02.jpg" alt="" class="img-fluid"></a>
-                                <a href="#"><img src="upload/garden_sq_03.jpg" alt="" class="img-fluid"></a>
-                                <a href="#"><img src="upload/garden_sq_04.jpg" alt="" class="img-fluid"></a>
-                                <a href="#"><img src="upload/garden_sq_05.jpg" alt="" class="img-fluid"></a>
-                                <a href="#"><img src="upload/garden_sq_06.jpg" alt="" class="img-fluid"></a>
-                                <a href="#"><img src="upload/garden_sq_07.jpg" alt="" class="img-fluid"></a>
-                                <a href="#"><img src="upload/garden_sq_08.jpg" alt="" class="img-fluid"></a>
-                                <a href="#"><img src="upload/garden_sq_09.jpg" alt="" class="img-fluid"></a>
-                            </div><!-- end Instagram wrapper -->
                         </div><!-- end widget -->
 
                         <div class="widget">
