my cm creative test

--- a/demoad/ad.html
+++ b/demoad/ad.html
@@ -8,6 +8,12 @@
     <title>Perfomics - demo digital ad</title>
 
     <style>
+        body,
+        html {
+            padding: 0;
+            margin: 0;
+        }
+
         .mobile-frame {
             width: auto;
             height: 900px;
@@ -20,7 +26,7 @@
         iframe {
             position: absolute;
             top: 223px;
-            left: 110px;
+            left: 102px;
         }
     </style>
 </head>
