--- a/demoad/ccad.html
+++ b/demoad/ccad.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <img src="demo-head.jpg" style="position: fixed;z-index:100;">
+    <img src="demo-head.jpg" style="position: fixed;z-index:100;width:100%;height:auto;">
     <section class="section wb" style="position: absolute;overflow-y:auto;top:0;left:0;padding-top:120px;">
         <div class="container">
             <div class="row">
