--- a/demoad/cc1ad.html
+++ b/demoad/cc1ad.html
@@ -49,6 +49,20 @@
         </div>
     </div>
 
+    <div class="direct_test" style="width:414px;height:260px;">
+        <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+        <div id="gpt-passback">
+            <script>
+                window.googletag = window.googletag || { cmd: [] };
+                googletag.cmd.push(function () {
+                    googletag.defineSlot('/21669303496/cctest_fs_414260', [414, 260], 'gpt-passback').addService(googletag.pubads());
+                    googletag.enableServices();
+                    googletag.display('gpt-passback');
+                });
+            </script>
+        </div>
+    </div>
+
 
 </body>
 
