--- a/demoad/cc1ad.html
+++ b/demoad/cc1ad.html
@@ -35,21 +35,21 @@
             </div><!-- end row -->
         </div><!-- end container -->
     </section>
-
-
-    <div class="direct_test" style="width:414px;height:260px;">
+    <div class="test_box" style="width:300px;height:100px;">
         <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
         <div id="gpt-passback">
             <script>
                 window.googletag = window.googletag || { cmd: [] };
                 googletag.cmd.push(function () {
-                    googletag.defineSlot('/21669303496/cctest_fs_414260', [414, 260], 'gpt-passback').addService(googletag.pubads());
+                    googletag.defineSlot('/21669303496/cc_1x1_CMCreative', [1, 1], 'gpt-passback').addService(googletag.pubads());
                     googletag.enableServices();
                     googletag.display('gpt-passback');
                 });
             </script>
         </div>
     </div>
+
+
 
 
 </body>
