--- a/demoad/cc1ad.html
+++ b/demoad/cc1ad.html
@@ -10,6 +10,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <title>cc demo page</title>
+    <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+    <script>
+        window.googletag = window.googletag || { cmd: [] };
+        googletag.cmd.push(function () {
+            googletag.defineOutOfPageSlot('/21669303496/cc_ofp_test', 'div-gpt-ad-1626329817204-0').addService(googletag.pubads());
+            googletag.pubads().enableSingleRequest();
+            googletag.enableServices();
+        });
+    </script>
     <style>
         html,
         body {
@@ -48,15 +57,11 @@
             </script>
         </div> -->
 
-        <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
-        <div id="gpt-passback">
+        <!-- /21669303496/cc_ofp_test -->
+        <!-- /21669303496/cc_ofp_test -->
+        <div id='div-gpt-ad-1626329817204-0'>
             <script>
-                window.googletag = window.googletag || { cmd: [] };
-                googletag.cmd.push(function () {
-                    googletag.defineSlot('/21669303496/cc_ofp_test', [414, 260], 'gpt-passback').addService(googletag.pubads());
-                    googletag.enableServices();
-                    googletag.display('gpt-passback');
-                });
+                googletag.cmd.push(function () { googletag.display('div-gpt-ad-1626329817204-0'); });
             </script>
         </div>
     </div>
