--- a/demoad/cc1ad.html
+++ b/demoad/cc1ad.html
@@ -44,7 +44,7 @@
             </div><!-- end row -->
         </div><!-- end container -->
     </section>
-    <div class="test_box" style="width:300px;height:100px;">
+    <div class="test_box" style="width:100%;height:260px;">
         <!-- <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
         <div id="gpt-passback">
             <script>
