--- a/demoad/cc2ad.html
+++ b/demoad/cc2ad.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
     <script>
         window.googletag = window.googletag || { cmd: [] };
@@ -41,6 +42,7 @@
             </div><!-- end row -->
         </div><!-- end container -->
     </section>
+
     <div class="test_box" style="width:100%;height:260px;">
         <!-- /21669303496/cc_1x1_CMCreative -->
         <div id='div-gpt-ad-1628498031248-0'>
@@ -50,7 +52,6 @@
         </div>
     </div>
 
-    </div>
 
 
 </body>
