--- a/demoad/cc2ad.html
+++ b/demoad/cc2ad.html
@@ -5,15 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
-    <script>
-        window.googletag = window.googletag || { cmd: [] };
-        googletag.cmd.push(function () {
-            googletag.defineSlot('/21669303496/cc_1x1_CMCreative', [1, 1], 'div-gpt-ad-1628498031248-0').addService(googletag.pubads());
-            googletag.pubads().enableSingleRequest();
-            googletag.enableServices();
-        });
-    </script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <title>cc demo page</title>
@@ -42,15 +33,20 @@
             </div><!-- end row -->
         </div><!-- end container -->
     </section>
-
-
     <div class="test_box" style="width:100%;height:260px;">
-        <!-- /21669303496/cc_1x1_CMCreative -->
-        <div id='div-gpt-ad-1628498031248-0'>
+        <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+        <div id="gpt-passback">
             <script>
-                googletag.cmd.push(function () { googletag.display('div-gpt-ad-1628498031248-0'); });
+                window.googletag = window.googletag || { cmd: [] };
+                googletag.cmd.push(function () {
+                    googletag.defineSlot('/21669303496/cc_1x1_CMCreative', [1, 1], 'gpt-passback').addService(googletag.pubads());
+                    googletag.enableServices();
+                    googletag.display('gpt-passback');
+                });
             </script>
         </div>
+    </div>
+
     </div>
 
 
