--- a/demoad/cc2ad.html
+++ b/demoad/cc2ad.html
@@ -5,14 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <title>cc demo page</title>
     <style>
         html,
         body {
             padding: 0;
             margin: 0;
+        }
+
+        img,
+        div {
+            width: 100%;
         }
     </style>
 </head>
@@ -33,6 +36,7 @@
             </div><!-- end row -->
         </div><!-- end container -->
     </section>
+
     <div class="test_box" style="width:100%;height:260px;">
         <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
         <div id="gpt-passback">
