--- a/demoad/cc2ad.html
+++ b/demoad/cc2ad.html
@@ -6,6 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cc demo page</title>
+    <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+    <script>
+        window.googletag = window.googletag || { cmd: [] };
+        googletag.cmd.push(function () {
+            googletag.defineSlot('/21669303496/cc_1x1_CMCreative', [1, 1], 'div-gpt-ad-1628498031248-0').addService(googletag.pubads());
+            googletag.pubads().enableSingleRequest();
+            googletag.enableServices();
+        });
+    </script>
     <style>
         html,
         body {
@@ -32,7 +41,12 @@
         </div><!-- end container -->
     </section>
     <div class="test_box" style="width:100%;height:260px;">
-        saadf
+        <!-- /21669303496/cc_1x1_CMCreative -->
+        <div id='div-gpt-ad-1628498031248-0'>
+            <script>
+                googletag.cmd.push(function () { googletag.display('div-gpt-ad-1628498031248-0'); });
+            </script>
+        </div>
     </div>
 
     </div>
