--- a/demoad/cc1ad.html
+++ b/demoad/cc1ad.html
@@ -6,15 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
-    <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <title>cc demo page</title>
-    <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
     <script>
         window.googletag = window.googletag || { cmd: [] };
         googletag.cmd.push(function () {
-            googletag.defineOutOfPageSlot('/21669303496/cc_ofp_test', 'div-gpt-ad-1626329817204-0').addService(googletag.pubads());
+            googletag.defineSlot('/21669303496/cc_1x1_CMCreative', [1, 1], 'div-gpt-ad-1628498031248-0').addService(googletag.pubads());
             googletag.pubads().enableSingleRequest();
             googletag.enableServices();
         });
@@ -45,23 +43,9 @@
         </div><!-- end container -->
     </section>
     <div class="test_box" style="width:100%;height:260px;">
-        <!-- <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
-        <div id="gpt-passback">
+        <div id='div-gpt-ad-1628498031248-0'>
             <script>
-                window.googletag = window.googletag || { cmd: [] };
-                googletag.cmd.push(function () {
-                    googletag.defineSlot('/21669303496/cc_1x1_CMCreative', [1, 1], 'gpt-passback').addService(googletag.pubads());
-                    googletag.enableServices();
-                    googletag.display('gpt-passback');
-                });
-            </script>
-        </div> -->
-
-        <!-- /21669303496/cc_ofp_test -->
-        <!-- /21669303496/cc_ofp_test -->
-        <div id='div-gpt-ad-1626329817204-0'>
-            <script>
-                googletag.cmd.push(function () { googletag.display('div-gpt-ad-1626329817204-0'); });
+                googletag.cmd.push(function () { googletag.display('div-gpt-ad-1628498031248-0'); });
             </script>
         </div>
     </div>
