--- a/demoad/cc2ad.html
+++ b/demoad/cc2ad.html
@@ -6,13 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cc demo page</title>
-
-
-    <script src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+    <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
     <script>
         window.googletag = window.googletag || { cmd: [] };
         googletag.cmd.push(function () {
-            googletag.defineSlot('/21669303496/cc_1x1_CMCreative', [1, 1], 'div-gpt-ad-1628498031248-0').addService(googletag.pubads());
+            googletag.defineSlot('/21669303496/cc_1x1_CMCreative', [1, 1], 'div-gpt-ad-1628654943805-0').addService(googletag.pubads());
             googletag.pubads().enableSingleRequest();
             googletag.enableServices();
         });
@@ -44,9 +42,9 @@
     </section>
     <div class="test_box" style="width:100%;height:260px;">
         <!-- /21669303496/cc_1x1_CMCreative -->
-        <div id='div-gpt-ad-1628498031248-0'>
+        <div id='div-gpt-ad-1628654943805-0'>
             <script>
-                googletag.cmd.push(function () { googletag.display('div-gpt-ad-1628498031248-0'); });
+                googletag.cmd.push(function () { googletag.display('div-gpt-ad-1628654943805-0'); });
             </script>
         </div>
     </div>
